# odd-collectors

./: .gitignore  Makefile  README.md  pyproject.toml
odd-collector/: .gitignore  Dockerfile  README.md  collector_config.yaml  pyproject.toml  secrets_config.cfg
odd-collector-aws/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  collector_config.yaml  pyproject.toml  start.sh
odd-collector-aws/config_examples/: athena.yaml  dms.yaml  dynamodb.yaml  glue.yaml  kinesis.yaml  quicksight.yaml  s3.yaml  s3_delta.yaml  sagemaker.yaml  sagemaker_featurestore.yaml  sqs.yaml
odd-collector-aws/docker/: docker-compose.yml
odd-collector-aws/odd_collector_aws/: __init__.py  __main__.py  const.py  errors.py  logger.py
odd-collector-aws/odd_collector_aws/adapters/athena/: adapter.py
odd-collector-aws/odd_collector_aws/adapters/dms/: README.md  __init__.py  adapter.py  client.py
odd-collector-aws/odd_collector_aws/adapters/dynamodb/: adapter.py  metadata.py
odd-collector-aws/odd_collector_aws/adapters/glue/: adapter.py
odd-collector-aws/odd_collector_aws/adapters/kinesis/: adapter.py
odd-collector-aws/odd_collector_aws/adapters/quicksight/: adapter.py
odd-collector-aws/odd_collector_aws/adapters/s3/: adapter.py  file_system.py  utils.py
odd-collector-aws/odd_collector_aws/adapters/s3_delta/: adapter.py  client.py
odd-collector-aws/odd_collector_aws/adapters/sagemaker/: adapter.py  experiment_mapper.py  sagemaker_client.py
odd-collector-aws/odd_collector_aws/adapters/sagemaker_featurestore/: adapter.py
odd-collector-aws/odd_collector_aws/adapters/sqs/: adapter.py  sqs_generator.py
odd-collector-aws/odd_collector_aws/aws/: aws_client.py
odd-collector-aws/odd_collector_aws/domain/: dataset_config.py  fetch_paginator.py  paginator_config.py  plugin.py  to_data_entity.py
odd-collector-aws/odd_collector_aws/filesystem/: pyarrow_fs.py
odd-collector-aws/odd_collector_aws/utils/: __init__.py  create_generator.py  dates.py  flat_list_get.py  flatdict.py  get_file_extension.py  parse_s3_url.py  remove_s3_protocol.py  s3_compatible_generator.py
odd-collector-aws/tests/adapters/s3/: test_s3_path_to_name.py  test_utils.py
odd-collector-aws/tests/utils/: get_dataset_class.py  get_file_extension.py
odd-collector-azure/: .gitignore  Dockerfile  README.md  collector_config.yaml  pyproject.toml  start.sh
odd-collector-azure/config_examples/: azure_data_factory.yaml  azure_sql.yaml  blob_storage.yaml  power_bi.yaml
odd-collector-azure/docker/: docker-compose.yml
odd-collector-azure/odd_collector_azure/: __main__.py
odd-collector-azure/odd_collector_azure/adapters/azure_data_factory/: adapter.py  client.py  readme.md  utils.py
odd-collector-azure/odd_collector_azure/adapters/azure_sql/: adapter.py  logger.py  repository.py
odd-collector-azure/odd_collector_azure/adapters/blob_storage/: adapter.py  dataset_config.py  file_system.py  parse_azure_url.py  utils.py
odd-collector-azure/odd_collector_azure/adapters/powerbi/: __init__.py  adapter.py  client.py
odd-collector-azure/odd_collector_azure/azure_client/: azure_client.py
odd-collector-azure/odd_collector_azure/domain/: plugin.py
odd-collector-azure/odd_collector_azure/helpers/: bytes_to_str.py
odd-collector-gcp/: .dockerignore  Dockerfile  README.md  collector_config.yaml  pyproject.toml  start.sh
odd-collector-gcp/config_examples/: bigquery.yaml  gcs.yaml  gcs_delta.yaml
odd-collector-gcp/docker/: README.md  demo.yaml
odd-collector-gcp/docker/config/: collector_config.yaml
odd-collector-gcp/odd_collector_gcp/: __init__.py  __main__.py  errors.py
odd-collector-gcp/odd_collector_gcp/adapters/bigquery_storage/: adapter.py  dto.py  mapper.py
odd-collector-gcp/odd_collector_gcp/adapters/bigtable/: README.md  adapter.py  mapper.py  models.py
odd-collector-gcp/odd_collector_gcp/domain/: dataset_config.py  plugin.py
odd-collector-gcp/odd_collector_gcp/filesystem/: pyarrow_fs.py
odd-collector-gcp/odd_collector_gcp/utils/: get_properties.py  parse_gcs_url.py  remove_gcs_protocol.py
odd-collector-gcp/tests/: test_bigquery_metadata.py
odd-collector-sdk/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
odd-collector-sdk/.github/workflows/: create_pypi_package.yaml  linting.yaml
odd-collector-sdk/odd_collector_sdk/: __init__.py  __version__.py  collector.py  errors.py  job.py  load_adapter.py  shutdown.py
odd-collector-sdk/odd_collector_sdk/api/: datasource_api.py  http_client.py
odd-collector-sdk/odd_collector_sdk/domain/: adapter.py  collector_config.py  collector_config_loader.py  filter.py  plugin.py
odd-collector-sdk/odd_collector_sdk/grammar_parser/: build_dataset_field.py  exceptions.py  field_types.py
odd-collector-sdk/odd_collector_sdk/secrets/: base_secrets.py  secrets_backend_factory.py
odd-collector-sdk/odd_collector_sdk/types/: __init__.py
odd-collector-sdk/odd_collector_sdk/utils/: collector_config_generation.py  collector_config_parse.py  create_collector_config.py  decorators.py  json_encoder.py  metadata.py  print_version.py  yaml_parser.py
odd-collector-sdk/odd_collector_sdk_temp/: collector.py  logger.py
odd-collector-sdk/odd_collector_sdk_temp/domain/: collector_config.py  plugin.py
odd-collector-sdk/odd_collector_sdk_temp/secrets/: base_secrets.py
odd-collector-sdk/tests/: collector_config.yaml  collector_config_with_env_var.yaml  generator.py  test_config_loader.py  test_module_importer.py  test_yaml_parser.py
odd-collector-sdk/tests/api/: test_platform_api.py
odd-collector-sdk/tests/domain/: test_filter.py
odd-collector-sdk/tests/plugins/: plugins.py
odd-collector-sdk/tests/utils/: test_metadata.py
odd-collector/config_examples/: ckan.yaml  odbc.yaml  postgresql.yaml  snowflake.yaml
odd-collector/odd_collector/: __main__.py
odd-collector/odd_collector/domain/: plugin.py
odd-collector/odd_collector/models/: table.py
odd-collector/tests/integration/: helpers.py  test_clickhouse.py  test_cockroachdb.py  test_mssql.py  test_mysql.py  test_postgres.py
(+328 files in other folders)
