[tool.poetry]
name = "odd-collectors"
version = "0.1.0"
description = "Monorepo for ODD collectors"
license = "Apache-2.0"
authors = ["Open Data Discovery <pypi@opendatadiscovery.org>"]
homepage = "https://github.com/opendatadiscovery/odd-collectors"
repository = "https://github.com/opendatadiscovery/odd-collectors"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pre-commit = "^3.5.0"

[tool.isort]
profile="black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
