[tool.poetry]
name = "odd-collector-aws"
version = "0.1.16"
description = "ODD Collector for AWS"
license = "Apache-2.0"
authors = ["Open Data Discovery <pypi@opendatadiscovery.org>"]
homepage = "https://github.com/opendatadiscovery/odd-collector-aws"
repository = "https://github.com/opendatadiscovery/odd-collector-aws"

[tool.poetry.dependencies]
python = "^3.9"
oddrn-generator = "^0.1.102"
python-dotenv = "^1.0.1"
boto3 = "^1.34.106"
pyhumps = "^3.8.0"
pyarrow = "15.0.0"
humps = "^0.2.2"
flatdict = "^4.0.1"
odd-collector-sdk = "^0.3.58"
lark-parser = "^0.12.0"
deltalake = "^0.17.4"
more-itertools = "^10.2.0"
pydantic-settings = "^2.2.1"
pydantic = "^2.7.1"
odd-models = "^2.0.50"
botocore = "^1.34.106"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
