[tool.poetry]
name = "odd-collector-sdk"
version = "0.3.43"
description = "ODD Collector"
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/opendatadiscovery/odd-collector-sdk"
repository = "https://github.com/opendatadiscovery/odd-collector-sdk"
keywords = ["odd-collector-sdk", "odd_collector_sdk", "opendatadiscovery"]
include = ["LICENSE"]
authors = ["Open Data Discovery <pypi@opendatadiscovery.org>", "Pavel Makarichev <pmakarichev@provectus.com>"]

[tool.poetry.dependencies]
python = "^3.9"
APScheduler = "^3.8.1"
pydantic = "^1.8.2"
aiohttp = "^3.8.1"
pyaml-env = "^1.1.5"
odd-models = "^2.0.28"
importlib-metadata = "^5.1.0"
tqdm = "^4.64.1"
funcy = "^2.0"
loguru = "^0.6.0"
oddrn-generator = "^0.1.73"
flatdict = "^4.0.1"
prettytable = "^3.8.0"
lark-parser = "^0.12.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pre-commit = "^3.0.4"
ruff = "^0.0.278"
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore =["E501"]

[tool.ruff.per-file-ignores]
"tests/adapters/glue/adapter.py" = ["F401"]


