[tool.poetry]
name = "odd-collector-sdk"
version = "0.3.60"
description = "ODD Collector"
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/opendatadiscovery/odd-collector-sdk"
repository = "https://github.com/opendatadiscovery/odd-collector-sdk"
keywords = ["odd-collector-sdk", "odd_collector_sdk", "opendatadiscovery"]
include = ["LICENSE"]
authors = ["Open Data Discovery <pypi@opendatadiscovery.org>", "Pavel Makarichev <pmakarichev@provectus.com>"]

[tool.poetry.dependencies]
python = "^3.9"
APScheduler = "^3.8.1"
pydantic = "^2.7.1"
aiohttp = "^3.8.1"
pyaml-env = "^1.1.5"
odd-models = "^2.0.47"
importlib-metadata = "6.11.0"
tqdm = "^4.64.1"
funcy = "^2.0"
loguru = "^0.7.2"
oddrn-generator = "^0.1.101"
flatdict = "^4.0.1"
prettytable = "^3.8.0"
lark-parser = "^0.12.0"
boto3="^1.34.88"
botocore = "^1.34.88"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
setuptools = "^69.5.1"
aioresponses = "^0.7.6"
pytest-asyncio = "^0.23.8"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
