[tool.poetry]
name = "odd-collector"
version = "0.1.66"
description = "ODD Collector"
authors = ["Open Data Discovery <pypi@opendatadiscovery.org>"]
keywords = [
    "Open Data Discovery",
    "Metadata",
    "Data Discovery",
    "Data Observability",
]
homepage = "https://github.com/opendatadiscovery/odd-collector"
repository = "https://github.com/opendatadiscovery/odd-collector"


[tool.poetry.dependencies]
boto3 = "^1.34.91"
cassandra-driver = "3.25.0"
confluent-kafka = "1.9.2"
elasticsearch = "8.7.0"
feast = "^0.37.1"
funcy = "^2.0"
flatdict = "4.0.1"
hive-metastore-client = "1.0.9"
lark-parser = "^0.12.0"
more-itertools = "^10.1.0"
mysql-connector-python = "^8.0.32"
neo4j = "^5.19.0"
oracledb = "1.2.1"
oddrn-generator = "^0.1.103"
psycopg2-binary = "2.9.3"
python = "^3.9"
pyhumps = "3.0.2"
pyodbc = "4.0.35"
pymongo = { extras = ["srv"], version = "4.0.2" }
presto-python-client = "0.8.2"
pymssql = "2.2.10"
snowflake-connector-python = "^3.12.1"
sqlalchemy = "^2.0.29"
tableauserverclient = "0.19.0"
tarantool = "0.8.0"
trino = "0.315.0"
vertica-python = "1.1.1"
pyaml-env = "^1.2.1"
pytz = "^2022.7"
fastavro = "1.9.0"
llvmlite = "^0.42.0"
numba = "^0.59.1"
mlflow = "^2.12.1"
sql-metadata = "^2.9.0"
odd-collector-sdk = "^0.3.59"
clickhouse-connect = "^0.5.14"
odd-models = "^2.0.50"
couchbase = "^4.1.3"
pyhive = { version = "^0.6.5", extras = ["hive"] }
duckdb = "^0.10.2"
opensearch-py = "2.3.2"
aioresponses = "^0.7.6"
pandas = "2.1.0"
pyarrow = "15.0.0"
botocore = "^1.34.91"
cachetools = "^5.3.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
pymysql = "^1.1.0"
testcontainers = "^4.4.0"
clickhouse-driver = "^0.2.7"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = ["integration"]
